second-semester/python-to-js/Python3Parser.py
# Generated from Python3.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Python3Parser ( Parser ):

    grammarFileName = "Python3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'def'", "'return'", "'raise'", "'from'", 
                     "'import'", "'as'", "'global'", "'nonlocal'", "'assert'", 
                     "'if'", "'elif'", "'else'", "'while'", "'for'", "'in'", 
                     "'try'", "'finally'", "'with'", "'except'", "'lambda'", 
                     "'or'", "'and'", "'not'", "'is'", "'None'", "'True'", 
                     "'False'", "'class'", "'yield'", "'del'", "'pass'", 
                     "'continue'", "'break'", "'async'", "'await'", "<INVALID>", 
                     "'.'", "'...'", "'*'", "'('", "')'", "','", "':'", 
                     "';'", "'**'", "'='", "'['", "']'", "'|'", "'^'", "'&'", 
                     "'<<'", "'>>'", "'+'", "'-'", "'/'", "'%'", "'//'", 
                     "'~'", "'{'", "'}'", "'<'", "'>'", "'=='", "'>='", 
                     "'<='", "'<>'", "'!='", "'@'", "'->'", "'+='", "'-='", 
                     "'*='", "'@='", "'/='", "'%='", "'&='", "'|='", "'^='", 
                     "'<<='", "'>>='", "'**='", "'//='" ]

    symbolicNames = [ "<INVALID>", "STRING", "NUMBER", "INTEGER_NUMBER", 
                      "FLOAT_NUMBER", "DEF", "RETURN", "RAISE", "FROM", 
                      "IMPORT", "AS", "GLOBAL", "NONLOCAL", "ASSERT", "IF", 
                      "ELIF", "ELSE", "WHILE", "FOR", "IN", "TRY", "FINALLY", 
                      "WITH", "EXCEPT", "LAMBDA", "OR", "AND", "NOT", "IS", 
                      "NONE", "TRUE", "FALSE", "CLASS", "YIELD", "DEL", 
                      "PASS", "CONTINUE", "BREAK", "ASYNC", "AWAIT", "NEWLINE", 
                      "DOT", "ELLIPSIS", "STAR", "OPEN_PAREN", "CLOSE_PAREN", 
                      "COMMA", "COLON", "SEMI_COLON", "POWER", "ASSIGN", 
                      "OPEN_BRACK", "CLOSE_BRACK", "OR_OP", "XOR", "AND_OP", 
                      "LEFT_SHIFT", "RIGHT_SHIFT", "ADD", "MINUS", "DIV", 
                      "MOD", "IDIV", "NOT_OP", "OPEN_BRACE", "CLOSE_BRACE", 
                      "LESS_THAN", "GREATER_THAN", "EQUALS", "GT_EQ", "LT_EQ", 
                      "NOT_EQ_1", "NOT_EQ_2", "AT", "ARROW", "ADD_ASSIGN", 
                      "SUB_ASSIGN", "MULT_ASSIGN", "AT_ASSIGN", "DIV_ASSIGN", 
                      "MOD_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", 
                      "LEFT_SHIFT_ASSIGN", "RIGHT_SHIFT_ASSIGN", "POWER_ASSIGN", 
                      "IDIV_ASSIGN", "NAME", "STRING_LITERAL", "SKIP_", 
                      "INDENT", "DEDENT" ]

    RULE_single_input = 0
    RULE_file_input = 1
    RULE_eval_input = 2
    RULE_funcdef = 3
    RULE_parameters = 4
    RULE_typedargslist = 5
    RULE_varargslist = 6
    RULE_tfpdef = 7
    RULE_vfpdef = 8
    RULE_stmt = 9
    RULE_simple_stmt = 10
    RULE_small_stmt = 11
    RULE_expr_stmt = 12
    RULE_annassign = 13
    RULE_testlist_star_expr = 14
    RULE_augassign = 15
    RULE_pass_stmt = 16
    RULE_flow_stmt = 17
    RULE_break_stmt = 18
    RULE_continue_stmt = 19
    RULE_return_stmt = 20
    RULE_raise_stmt = 21
    RULE_assert_stmt = 22
    RULE_compound_stmt = 23
    RULE_async_stmt = 24
    RULE_if_stmt = 25
    RULE_while_stmt = 26
    RULE_for_stmt = 27
    RULE_try_stmt = 28
    RULE_with_stmt = 29
    RULE_with_item = 30
    RULE_except_clause = 31
    RULE_suite = 32
    RULE_test = 33
    RULE_test_nocond = 34
    RULE_or_test = 35
    RULE_and_test = 36
    RULE_not_test = 37
    RULE_comparison = 38
    RULE_comp_op = 39
    RULE_star_expr = 40
    RULE_expr = 41
    RULE_xor_expr = 42
    RULE_and_expr = 43
    RULE_shift_expr = 44
    RULE_arith_expr = 45
    RULE_term = 46
    RULE_factor = 47
    RULE_power = 48
    RULE_atom_expr = 49
    RULE_atom = 50
    RULE_testlist_comp = 51
    RULE_trailer = 52
    RULE_subscriptlist = 53
    RULE_subscript = 54
    RULE_sliceop = 55
    RULE_exprlist = 56
    RULE_testlist = 57
    RULE_classdef = 58
    RULE_arglist = 59
    RULE_argument = 60
    RULE_comp_iter = 61
    RULE_comp_for = 62
    RULE_comp_if = 63

    ruleNames =  [ "single_input", "file_input", "eval_input", "funcdef", 
                   "parameters", "typedargslist", "varargslist", "tfpdef", 
                   "vfpdef", "stmt", "simple_stmt", "small_stmt", "expr_stmt", 
                   "annassign", "testlist_star_expr", "augassign", "pass_stmt", 
                   "flow_stmt", "break_stmt", "continue_stmt", "return_stmt", 
                   "raise_stmt", "assert_stmt", "compound_stmt", "async_stmt", 
                   "if_stmt", "while_stmt", "for_stmt", "try_stmt", "with_stmt", 
                   "with_item", "except_clause", "suite", "test", "test_nocond", 
                   "or_test", "and_test", "not_test", "comparison", "comp_op", 
                   "star_expr", "expr", "xor_expr", "and_expr", "shift_expr", 
                   "arith_expr", "term", "factor", "power", "atom_expr", 
                   "atom", "testlist_comp", "trailer", "subscriptlist", 
                   "subscript", "sliceop", "exprlist", "testlist", "classdef", 
                   "arglist", "argument", "comp_iter", "comp_for", "comp_if" ]

    EOF = Token.EOF
    STRING=1
    NUMBER=2
    INTEGER_NUMBER=3
    FLOAT_NUMBER=4
    DEF=5
    RETURN=6
    RAISE=7
    FROM=8
    IMPORT=9
    AS=10
    GLOBAL=11
    NONLOCAL=12
    ASSERT=13
    IF=14
    ELIF=15
    ELSE=16
    WHILE=17
    FOR=18
    IN=19
    TRY=20
    FINALLY=21
    WITH=22
    EXCEPT=23
    LAMBDA=24
    OR=25
    AND=26
    NOT=27
    IS=28
    NONE=29
    TRUE=30
    FALSE=31
    CLASS=32
    YIELD=33
    DEL=34
    PASS=35
    CONTINUE=36
    BREAK=37
    ASYNC=38
    AWAIT=39
    NEWLINE=40
    DOT=41
    ELLIPSIS=42
    STAR=43
    OPEN_PAREN=44
    CLOSE_PAREN=45
    COMMA=46
    COLON=47
    SEMI_COLON=48
    POWER=49
    ASSIGN=50
    OPEN_BRACK=51
    CLOSE_BRACK=52
    OR_OP=53
    XOR=54
    AND_OP=55
    LEFT_SHIFT=56
    RIGHT_SHIFT=57
    ADD=58
    MINUS=59
    DIV=60
    MOD=61
    IDIV=62
    NOT_OP=63
    OPEN_BRACE=64
    CLOSE_BRACE=65
    LESS_THAN=66
    GREATER_THAN=67
    EQUALS=68
    GT_EQ=69
    LT_EQ=70
    NOT_EQ_1=71
    NOT_EQ_2=72
    AT=73
    ARROW=74
    ADD_ASSIGN=75
    SUB_ASSIGN=76
    MULT_ASSIGN=77
    AT_ASSIGN=78
    DIV_ASSIGN=79
    MOD_ASSIGN=80
    AND_ASSIGN=81
    OR_ASSIGN=82
    XOR_ASSIGN=83
    LEFT_SHIFT_ASSIGN=84
    RIGHT_SHIFT_ASSIGN=85
    POWER_ASSIGN=86
    IDIV_ASSIGN=87
    NAME=88
    STRING_LITERAL=89
    SKIP_=90
    INDENT=91
    DEDENT=92

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Single_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(Python3Parser.NEWLINE, 0)

        def simple_stmt(self):
            return self.getTypedRuleContext(Python3Parser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(Python3Parser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return Python3Parser.RULE_single_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_input" ):
                listener.enterSingle_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_input" ):
                listener.exitSingle_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_input" ):
                return visitor.visitSingle_input(self)
            else:
                return visitor.visitChildren(self)




    def single_input(self):

        localctx = Python3Parser.Single_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_single_input)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(Python3Parser.NEWLINE)
                pass
            elif token in [1, 2, 6, 7, 13, 27, 29, 30, 31, 35, 36, 37, 42, 43, 58, 59, 63, 88]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.simple_stmt()
                pass
            elif token in [5, 14, 17, 18, 20, 22, 32]:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.compound_stmt()
                self.state = 131
                self.match(Python3Parser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class File_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Python3Parser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(Python3Parser.NEWLINE)
            else:
                return self.getToken(Python3Parser.NEWLINE, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Python3Parser.StmtContext)
            else:
                return self.getTypedRuleContext(Python3Parser.StmtContext,i)


        def getRuleIndex(self):
            return Python3Parser.RULE_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_input" ):
                listener.enterFile_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_input" ):
                listener.exitFile_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_input" ):
                return visitor.visitFile_input(self)
            else:
                return visitor.visitChildren(self)




    def file_input(self):

        localctx = Python3Parser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -8358666366037368602) != 0) or _la==88:
                self.state = 137
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [40]:
                    self.state = 135
                    self.match(Python3Parser.NEWLINE)
                    pass
                elif token in [1, 2, 5, 6, 7, 13, 14, 17, 18, 20, 22, 27, 29, 30, 31, 32, 35, 36, 37, 42, 43, 58, 59, 63, 88]:
                    self.state = 136
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(Python3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Eval_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def testlist(self):
            return self.getTypedRuleContext(Python3Parser.TestlistContext,0)


        def EOF(self):
            return self.getToken(Python3Parser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(Python3Parser.NEWLINE)
            else:
                return self.getToken(Python3Parser.NEWLINE, i)

        def getRuleIndex(self):
            return Python3Parser.RULE_eval_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEval_input" ):
                listener.enterEval_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEval_input" ):
                listener.exitEval_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEval_input" ):
                return visitor.visitEval_input(self)
            else:
                return visitor.visitChildren(self)




    def eval_input(self):

        localctx = Python3Parser.Eval_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_eval_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.testlist()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==40:
                self.state = 145
                self.match(Python3Parser.NEWLINE)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.match(Python3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(Python3Parser.DEF, 0)

        def NAME(self):
            return self.getToken(Python3Parser.NAME, 0)

        def parameters(self):
            return self.getTypedRuleContext(Python3Parser.ParametersContext,0)


        def COLON(self):
            return self.getToken(Python3Parser.COLON, 0)

        def suite(self):
            return self.getTypedRuleContext(Python3Parser.SuiteContext,0)


        def ARROW(self):
            return self.getToken(Python3Parser.ARROW, 0)

        def test(self):
            return self.getTypedRuleContext(Python3Parser.TestContext,0)


        def getRuleIndex(self):
            return Python3Parser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdef" ):
                return visitor.visitFuncdef(self)
            else:
                return visitor.visitChildren(self)




    def funcdef(self):

        localctx = Python3Parser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(Python3Parser.DEF)
            self.state = 154
            self.match(Python3Parser.NAME)
            self.state = 155
            self.parameters()
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==74:
                self.state = 156
                self.match(Python3Parser.ARROW)
                self.state = 157
                self.test()


            self.state = 160
            self.match(Python3Parser.COLON)
            self.state = 161
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PAREN(self):
            return self.getToken(Python3Parser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(Python3Parser.CLOSE_PAREN, 0)

        def typedargslist(self):
            return self.getTypedRuleContext(Python3Parser.TypedargslistContext,0)


        def getRuleIndex(self):
            return Python3Parser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = Python3Parser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(Python3Parser.OPEN_PAREN)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==88:
                self.state = 164
                self.typedargslist()


            self.state = 167
            self.match(Python3Parser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedargslistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tfpdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Python3Parser.TfpdefContext)
            else:
                return self.getTypedRuleContext(Python3Parser.TfpdefContext,i)


        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(Python3Parser.ASSIGN)
            else:
                return self.getToken(Python3Parser.ASSIGN, i)

        def test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Python3Parser.TestContext)
            else:
                return self.getTypedRuleContext(Python3Parser.TestContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(Python3Parser.COMMA)
            else:
                return self.getToken(Python3Parser.COMMA, i)

        def getRuleIndex(self):
            return Python3Parser.RULE_typedargslist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedargslist" ):
                listener.enterTypedargslist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedargslist" ):
                listener.exitTypedargslist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedargslist" ):
                return visitor.visitTypedargslist(self)
            else:
                return visitor.visitChildren(self)




    def typedargslist(self):

        localctx = Python3Parser.TypedargslistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typedargslist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.tfpdef()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==50:
                self.state = 170
                self.match(Python3Parser.ASSIGN)
                self.state = 171
                self.test()


            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 174
                self.match(Python3Parser.COMMA)
                self.state = 175
                self.tfpdef()
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==50:
                    self.state = 176
                    self.match(Python3Parser.ASSIGN)
                    self.state = 177
                    self.test()


                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)
